Brief notes in readme.